about us changed

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">PRODUCTS SECTION</h2>
+                    <h3 class="section-subheading text-muted">Our Healthcare Solutions</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -108,8 +108,8 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Blog </h2>
+                    <h3 class="section-subheading text-muted">Insights from Healthcare Technology</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -122,8 +122,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">The Future of Digital Healthcare in Africa</div>
+                                <div class="portfolio-caption-subheading text-muted">How technology is transforming healthcare delivery across the continent</div>
                             </div>
                         </div>
                     </div>
@@ -137,8 +137,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">Why Hospitals Need EMR Systems Today</div>
+                                <div class="portfolio-caption-subheading text-muted">Improving patient care, efficiency, and data security through digital records</div>
                             </div>
                         </div>
                     </div>
@@ -152,8 +152,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">Reducing Waiting Time with Hospital Automationh</div>
+                                <div class="portfolio-caption-subheading text-muted">Streamlining hospital operations for faster and better patient experiences</div>
                             </div>
                         </div>
                     </div>
@@ -274,14 +274,14 @@ Driven by a passion for technology and healthcare improvement, our team set out 
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">CAREERS SECTION</h2>
+                    <h3 class="section-subheading text-muted">Build the Future of Healthcare with Us</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-                            <h4>Parveen Anand</h4>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/.jpg" alt="..." />
+                            <h4>Alqomory</h4>
                             <p class="text-muted">Lead Designer</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
@@ -290,27 +290,27 @@ Driven by a passion for technology and healthcare improvement, our team set out 
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                            <h4>Diana Petersen</h4>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/.jpg" alt="..." />
+                            <h4>Vickee</h4>
                             <p class="text-muted">Lead Marketer</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
+                    <!-- <div class="col-lg-4"> -->
+                        <!-- <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>Larry Parker</h4>
                             <p class="text-muted">Lead Developer</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div> -->
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">At AV Tech, we’re always looking for passionate professionals who want to make an impact through technology.</p></div>
                 </div>
             </div>
         </section>
@@ -338,7 +338,7 @@ Driven by a passion for technology and healthcare improvement, our team set out 
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Let’s Build Smarter Healthcare Together</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
@@ -425,10 +425,18 @@ Driven by a passion for technology and healthcare improvement, our team set out 
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">The Future of Digital Healthcare in Africa</h2>
+                                    <p class="item-intro text-muted">How technology is transforming healthcare delivery across the continent</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Africa’s healthcare system is at a critical turning point. With a growing population, limited resources, and increasing demand for quality care, digital healthcare is no longer optional—it is the future.
+
+Digital healthcare uses technology to improve how medical services are delivered, managed, and accessed. From electronic medical records to telemedicine and hospital management systems, technology is transforming healthcare across the continent.
+
+One of the biggest opportunities for Africa lies in digitizing hospital operations. Many hospitals still rely on paper records, manual billing, and fragmented systems. These methods slow down care delivery and increase the risk of errors. Digital solutions help hospitals store patient data securely, improve collaboration among healthcare workers, and deliver faster services.
+
+As internet access, mobile technology, and cloud infrastructure continue to grow across Africa, healthcare institutions are better positioned than ever to adopt modern digital solutions. The future of healthcare in Africa will be driven by innovation, data, and secure medical software systems that put patients first.
+
+At AV Tech, we believe that digital healthcare will play a key role in improving access, efficiency, and quality of care across the continent.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -460,10 +468,18 @@ Driven by a passion for technology and healthcare improvement, our team set out 
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Why Hospitals Need EMR Systems Today</h2>
+                                    <p class="item-intro text-muted">Improving patient care, efficiency, and data security through digital records</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Electronic Medical Records (EMR) systems have become a vital part of modern healthcare delivery. They replace paper-based patient files with secure digital records that can be accessed quickly and accurately by authorized medical professionals.
+
+Hospitals that rely on manual records often face challenges such as lost files, slow retrieval of patient history, duplication of data, and medical errors. EMR systems solve these problems by centralizing patient information in one secure platform.
+
+With an EMR system, doctors and nurses can access patient history, lab results, prescriptions, and clinical notes in real time. This improves decision-making, reduces errors, and enhances the overall quality of patient care.
+
+EMR systems also improve hospital efficiency by reducing paperwork, saving time, and enabling better coordination between departments such as laboratories, pharmacies, and billing units.
+
+In today’s healthcare environment, where speed, accuracy, and data security are critical, EMR systems are no longer a luxury—they are a necessity. Hospitals that adopt EMR solutions are better equipped to provide safe, efficient, and modern healthcare services.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -495,10 +511,18 @@ Driven by a passion for technology and healthcare improvement, our team set out 
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Reducing Waiting Time with Hospital Automation</h2>
+                                    <p class="item-intro text-muted">Streamlining hospital operations for faster and better patient experiences</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Long waiting times are one of the most common challenges faced by hospitals today. Patients often spend hours waiting for registration, consultations, test results, or billing processes. This not only affects patient satisfaction but also places stress on healthcare workers.
+
+Hospital automation offers a powerful solution to this problem. By automating routine tasks such as patient registration, appointment scheduling, billing, and record management, hospitals can significantly reduce delays and improve workflow efficiency.
+
+Automated systems allow patients to be registered quickly, appointments to be managed efficiently, and medical records to be accessed instantly. This reduces bottlenecks and ensures that healthcare professionals can focus more on patient care rather than administrative tasks.
+
+Hospital automation also improves accuracy by minimizing manual errors and ensuring that information flows smoothly between departments. The result is faster service delivery, improved patient experience, and better use of hospital resources.
+
+At AV Tech, we build hospital automation solutions designed to reduce waiting times, streamline operations, and help healthcare providers deliver care more efficiently.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
