--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
+                                <!-- <h4>March 2011</h4> -->
                                 <h4 class="subheading">What Drives Us</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">We believe that every African deserves access to reliable, efficient, and technology-driven healthcare, regardless of location.
